Fixed alignment issues on title and subtitle

--- a/scss/pages/_404.scss
+++ b/scss/pages/_404.scss
@@ -7,7 +7,9 @@
 }
 
 .pnf {
+    display: flex;
     flex-direction: column;
+    text-align: center;
     gap: 4px;
     padding: 0 35px;
     justify-content: center;
